--- a/config.yml
+++ b/config.yml
@@ -6,7 +6,7 @@
 
 # at this time, "aws" and "azure" are defined targets
 # make sure that you ran the prepare.sh / prepare.bat script!
-target: aws
+target: azure
 
 aws:
   region: us-east-1
@@ -29,16 +29,16 @@ aws:
     use_spot_for_computes: false
 
 azure:
-  resource_group: resource-group-name
+  resource_group: cloud-cml
   size: Standard_D4d_v4
   size_compute: unused_at_the_moment
-  storage_account: storage-account-name
-  container_name: container-name
+  storage_account: cloudcml
+  container_name: cloud-cml
 
 common:
   disk_size: 64
   controller_hostname: cml-controller
-  key_name: ssh-key-name
+  key_name: cloud-cml
   allowed_ipv4_subnets: ["0.0.0.0/0"]
   enable_patty: true
 
@@ -99,7 +99,7 @@ secret:
 
     smartlicense_token:
       # Only used with dummy secret manager
-      raw_secret: your-smart-licensing-token
+      raw_secret:replace with personal license token 
       # Path to secret, used with both Vault and Conjur:
       #path: example-org/example-project/smartlicense_token
       # Used with Vault only:
@@ -118,7 +118,7 @@ app:
   # **No longer used, see the secret manager section above**
   #user: admin
   #pass: your-secret-password
-  software: cml2_2.7.0-4_amd64-20.pkg
+  software: cml2_2.7.2-26_amd64-29.pkg
   # The list must have at least ONE element, this is what the dummy is for in
   # case 00- and 01- are commented out!
   customize:
@@ -126,7 +126,7 @@ app:
     - 99-dummy.sh
 
 license:
-  flavor: CML_Enterprise
+  flavor: CML_Personal
   # **No longer used, see the secret manager section above**
   #token: your-smart-licensing-token
   # Unless you have additional node licenses available, leave this at zero
@@ -143,9 +143,9 @@ refplat:
     # - alpine-trex
     # - alpine-wanem
     # - asav
-    # - cat8000v
-    # - cat9000v-q200
-    # - cat9000v-uadp
+    - cat8000v
+    - cat9000v-q200
+    - cat9000v-uadp
     # - cat-sdwan-edge
     # - cat-sdwan-controller
     # - cat-sdwan-manager
@@ -158,17 +158,17 @@ refplat:
     - iosv
     - iosvl2
     # - iosxrv9000
-    # - nxosv9000
+    - nxosv9000
     - server
     - ubuntu
   images:
-    - alpine-3-19-1-base
+    - alpine-base-3-19-1
     # - alpine-3-19-1-trex
     # - alpine-3-19-1-wanem
     # - asav-9-20-2
-    # - cat8000v-17-13-01a
-    # - cat9000v-q200-17-12-01prd9
-    # - cat9000v-uadp-17-12-01prd9
+    - cat8000v-17-13-01a
+    - cat9000v-q200-17-12-01prd9
+    - cat9000v-uadp-17-12-01prd9
     # - cat-sdwan-edge-17-13-01a
     # - cat-sdwan-controller-20-13-1
     # - cat-sdwan-manager-20-13-1
@@ -181,6 +181,6 @@ refplat:
     - iosv-159-3-m8
     - iosvl2-2020
     # - iosxrv9000-7-11-1
-    # - nxosv9300-10-4-2-f
-    - server-tcl-14-1
+    - nxosv9300-10-4-2-f
+    - server-tcl-14-0
     - ubuntu-22-04-20240126
